[gd_scene load_steps=11 format=3 uid="uid://dtj4kc61xccxj"]

[ext_resource type="PackedScene" uid="uid://bj53os3gihh3l" path="res://player/player.tscn" id="1_glv2v"]
[ext_resource type="Script" uid="uid://dxt1dg4qdmnx5" path="res://main.gd" id="1_r0du0"]
[ext_resource type="PackedScene" uid="uid://ysl505ie1im2" path="res://npc/NPC.tscn" id="2_uu6xs"]
[ext_resource type="PackedScene" uid="uid://cajidukjnlimq" path="res://UI/DialogueBox.tscn" id="4_cm0pq"]
[ext_resource type="Script" uid="uid://vnroc5kmuh2h" path="res://http_request.gd" id="5_3dxm6"]
[ext_resource type="PackedScene" uid="uid://ffol4h3ima34" path="res://UI/health_panel.tscn" id="5_fos0i"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r0du0"]
size = Vector2(2240, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cm0pq"]
size = Vector2(2240, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fos0i"]
size = Vector2(16, 1280)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3dxm6"]
size = Vector2(8, 640)

[node name="Main" type="Node2D"]
position = Vector2(24, 0)
script = ExtResource("1_r0du0")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(459, 101)
scale = Vector2(7.03806, 35.386)
zoom = Vector2(0.619, 0.619)
limit_left = 27
limit_top = 40
limit_right = 1195
limit_bottom = 656

[node name="HealthPanel" parent="." instance=ExtResource("5_fos0i")]
offset = Vector2(20, 5)
scale = Vector2(0.8, 0.8)
transform = Transform2D(0.8, 0, 0, 0.8, 20, 5)
follow_viewport_enabled = true

[node name="Player" parent="." instance=ExtResource("1_glv2v")]
<<<<<<< HEAD
position = Vector2(132, 312)
scale = Vector2(1.5, 1.5)

[node name="Npc" parent="." node_paths=PackedStringArray("player") instance=ExtResource("2_uu6xs")]
z_index = 10
position = Vector2(102, 325)
scale = Vector2(1, 0.995)
=======
position = Vector2(141, 328)

[node name="Npc" parent="." node_paths=PackedStringArray("player") instance=ExtResource("2_uu6xs")]
z_index = 10
position = Vector2(65, 355)
scale = Vector2(0.603, 0.6)
>>>>>>> d5675ae (final touches)
player = NodePath("../Player")

[node name="MapRoot" type="Node2D" parent="."]

[node name="MapBounds" type="Node2D" parent="."]

[node name="WallTop" type="StaticBody2D" parent="MapBounds"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MapBounds/WallTop"]
position = Vector2(568, 1)
scale = Vector2(0.5, 0.5)
shape = SubResource("RectangleShape2D_r0du0")

[node name="WallBottom" type="StaticBody2D" parent="MapBounds"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MapBounds/WallBottom"]
position = Vector2(566, 640)
scale = Vector2(0.5, 0.5)
shape = SubResource("RectangleShape2D_cm0pq")

[node name="WallLeft" type="StaticBody2D" parent="MapBounds"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MapBounds/WallLeft"]
position = Vector2(14, 325)
scale = Vector2(0.5, 0.5)
shape = SubResource("RectangleShape2D_fos0i")

[node name="WallRight" type="StaticBody2D" parent="MapBounds"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MapBounds/WallRight"]
position = Vector2(1130, 321)
shape = SubResource("RectangleShape2D_3dxm6")

[node name="HTTPRequest" type="HTTPRequest" parent="."]
script = ExtResource("5_3dxm6")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="DialogueBox" parent="UI" instance=ExtResource("4_cm0pq")]
layout_mode = 1
offset_left = 324.0
offset_top = 401.0
offset_right = 766.0
offset_bottom = 548.72

[node name="OpenButton" type="Button" parent="UI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.8
anchor_top = 0.6
anchor_right = 3.05
anchor_bottom = 1.375
offset_left = 302.0
offset_top = 29.0
offset_right = 302.0
offset_bottom = 29.0
text = "Open Chat"
